# icon-cutter-legacy

./: Cargo.toml  README.md  config.yaml  rustfmt.toml
examples/: config-documentation.yaml  config.yaml
examples/4 corners/: config.yaml
examples/5 corners/: config.yaml
examples/Bay/: config.yaml
examples/Mojave Sun/: config.yaml
examples/Mojave Sun tall/: config.yaml
examples/tall 5 corners/: config.yaml
examples/tall 5 corners base with dirs/: config.yaml
examples/tall 5 corners bottom/: config.yaml
examples/tall 5 corners frills/: config.yaml
examples/tall 5 corners frills with dirs/: config.yaml
examples/tg animated nondiagonal/: config.yaml  lava.dmi
examples/tg diagonal/: config.yaml
examples/tg nondiagonal/: config.yaml
examples/tgmc/: config.yaml
src/: config.rs  dmi.rs  error.rs  glob.rs  helpers.rs  main.rs
src/dmi/: chunk.rs  error.rs
