[package]
name = "icon-cutter"
version = "0.1.0"
authors = ["L <rohesie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
yaml-rust = "0.4.4"
inflate = "0.4.5"
deflate = "0.8.6"
dont_disappear = "3.0.1"
thiserror = "1.0.22"
anyhow = "1.0.34"
