[package]
name = "icon-cutter"
version = "0.1.0"
authors = ["L <rohesie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmi = { git = "https://github.com/Rohesie/dmi" }
anyhow = "1.0"
image = "0.23"
yaml-rust = "0.4"
dont_disappear = "3.0"
